Sun Jul 29 04:31:01 2012  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* bignum.c: Added #include <strings.h> for ffs(). Patch by Perry
	  Smith. Thank you. [Bug #6748]

Sat Jul 28 04:04:01 2012  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* include/ruby/intern.h (rb_num_zerodiv): Added NORETURN.
	  Patched by Xi Wang. [Bug #6736]

Wed Jul  4 19:36:17 2012  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/dl/cfunc.c (rb_dlcfunc_call): also needed the workaround for VC8
	  for x64.  [ruby-dev:45875] [Bug #6676]
	  reported by aves_ramphastos (Seigo Ishigane)

Tue Jul  3 19:37:52 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rmext): no extension to strip if empty string.

	* proc.c (rb_vm_rewrite_dfp_in_errinfo): Fix `unexpected return'
	occurs when a proc is called in ensure. [Backport #6460]

Tue Jul  3 11:44:23 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_enc_path_next, rb_enc_path_skip_prefix)
	  (rb_enc_path_last_separator, rb_enc_path_end)
	  (ruby_enc_find_basename, ruby_enc_find_extname): encoding-aware
	  path handling functions.

	* file.c (rb_home_dir, file_expand_path, rb_realpath_internal)
	  (rb_file_s_basename, rb_file_dirname, rb_file_s_extname)
	  (rb_file_join): should respect the encodings of arguments than
	  file system encoding.  [ruby-dev:45145] [Bug #5919]

	* dir.c (check_dirname, ruby_glob0): ditto.

	* ext/pathname/pathname.c (path_sub_ext): ditto.

Tue Jul  3 11:43:46 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (dir_chdir, check_dirname): get rid of optimization-out.

Thu Jun 28 17:57:49 2012  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (is_socket, is_console): add prototypes to fix compile
	  problem with gcc introduced at r32549.

Wed Jun 27 08:31:50 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* insns.def (splatarray): make new array if flag is set.

	* compile.c (iseq_compile_each): make new array with
	  splat. [ruby-core:21901][Feature #1125]
