@@ -24,6 +24,13 @@ LIBRUBYARG=@LIBRUBYARG@
 LIBS=@LIBS@
 DLDFLAGS=@DLDFLAGS@
 ruby=${bindir}/${RUBY_INSTALL_NAME}@EXEEXT@
+rubylibprefix=@rubylibprefix@
+rubylibdir=${rubylibprefix}/${ruby_version}
+vendordir=${rubylibprefix}/vendor_ruby
+sitedir=${rubylibprefix}/site_ruby
+rubyarchdir=${rubylibdir}/${arch}
+vendorarchdir=${vendordir}/${sitearch}
+sitearchdir=${sitedir}/${sitearch}
 rubyhdrdir=@rubyhdrdir@
 vendorhdrdir=@vendorhdrdir@
 sitehdrdir=@sitehdrdir@
