@@ -1,5 +1,5 @@
 #define RUBY_VERSION "1.9.3"
-#define RUBY_PATCHLEVEL 255
+#define RUBY_PATCHLEVEL 256
 
 #define RUBY_RELEASE_DATE "2012-07-29"
 #define RUBY_RELEASE_YEAR 2012
