@@ -1,3 +1,8 @@
+Sun Jul 29 04:32:06 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* template/ruby.pc.in: added rubylibprefix, {rubylib,vendor,site}dir
+	  and {ruby,vendor,site}archdir.  [ruby-core:42766][Feature #6052]
+
 Sun Jul 29 04:31:01 2012  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>
 
 	* bignum.c: Added #include <strings.h> for ffs(). Patch by Perry
